1) Added subtotal to each items in Cart 2) Added divider between the list items

--- a/src/app/components/main/cart-popover-view/cart-popover-view.component.html
+++ b/src/app/components/main/cart-popover-view/cart-popover-view.component.html
@@ -2,7 +2,7 @@
   <mat-list>
     <h3 mat-subheader>{{'toolbar.cart' | translate}}</h3>
     <mat-list-item>
-      <p mat-line class="margin-bottom-10">{{'cart.subtotal' | translate}}:
+      <p mat-line class="margin-bottom-10">{{'cart.total' | translate}}:
         <span class="price">{{getCurrency(subTotal)}}</span>
       </p>
       <button mat-line mat-flat-button color="primary" class="margin-bottom-20"
