--- a/src/app/components/main/product/abstract-product/product-list/product-list.component.html
+++ b/src/app/components/main/product/abstract-product/product-list/product-list.component.html
@@ -6,15 +6,21 @@
     <div class="float-left margin-left-20 margin-right-20">
       <h4 mat-line class="font-weight-light ellipsis-truncate margin-bottom-0">{{product.name}}</h4>
       <p mat-line class="margin-bottom-0 price">{{getCurrency(product.price)}}</p>
-      <p mat-line *ngIf="isCart">{{'cart.qty' | translate}}: {{product.quantityInCart}}
+      <p mat-line *ngIf="isCart" class="margin-bottom-0">{{'cart.qty' | translate}}: {{product.quantityInCart}}
         <mat-icon class="delete select" (click)="deleteCartItem(product)">delete</mat-icon>
+      </p>
+      <p mat-line class="margin-bottom-0" *ngIf="isCart">{{'cart.subtotal' | translate}}: <span class="price">
+        {{getCurrency(product.quantityInCart * product.price)}}</span>
       </p>
     </div>
   </div>
+  <mat-divider *ngIf="isCart"></mat-divider>
 </mat-list-item>
 
-<mat-list-item class="margin-top-10" *ngIf="!productList || productList && productList.length <= 0">
-  <div>
-    <p mat-line *ngIf="!isCart">{{'noRecord' | translate}}
-  </div>
-</mat-list-item>
+<ng-container *ngIf="!isCart">
+  <mat-list-item class="margin-top-10" *ngIf="!productList || productList && productList.length <= 0">
+    <div>
+      <p mat-line>{{'noRecord' | translate}}
+    </div>
+  </mat-list-item>
+</ng-container>
