1) added server key in environment.ts to provide server url 2) Product is now fetched ffrom api from node.js app 3) Changed key - id to _id to accomadate node.js app changes 4) Layout fixes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,7 @@
   position: relative;
   /* calculate remaining screenSize for main*/
   min-height: calc(100% - #{map_get($height, footer)} - #{map_get($height, toolbar)});
+  width: 100%;
   background-color: white;
   display: flex;
 }
