--- a/src/app/components/main/product/abstract-product/product-grid/product-grid.component.html
+++ b/src/app/components/main/product/abstract-product/product-grid/product-grid.component.html
@@ -4,14 +4,15 @@
     <mat-card-subtitle class="price">{{getCurrency(product?.price)}}</mat-card-subtitle>
     <span class="spacer"></span>
     <mat-icon class="select padding-top-3" aria-hidden="false" color="warn" *ngIf="isFavorite; else favoriteElse"
-              (click)="updateFav(product.id, false)">favorite
+              (click)="updateFav(product._id, false)">favorite
     </mat-icon>
     <ng-template #favoriteElse>
-      <mat-icon class="select padding-top-3" aria-hidden="false" (click)="updateFav(product.id, true)">favorite_border
+      <mat-icon class="select padding-top-3" aria-hidden="false" (click)="updateFav(product._id, true)">favorite_border
       </mat-icon>
     </ng-template>
   </mat-card-header>
-  <img mat-card-image [src]="getSanitizedImg(product.image)" alt="{{'altPhoto' | translate}} {{product?.name}}">
+  <!--<img mat-card-image [src]="getSanitizedImg(product.image)" alt="{{'altPhoto' | translate}} {{product?.name}}">-->
+  <img mat-card-image src="./assets/images/dummy.jpg" alt="{{'altPhoto' | translate}} {{product?.name}}">
   <mat-card-content>
     <p class="ellipsis-truncate" matTooltip="{{product?.description}}">
       {{product?.description}}
