--- a/src/app/components/main/shop-view/shop-view.component.html
+++ b/src/app/components/main/shop-view/shop-view.component.html
@@ -1,9 +1,11 @@
-<div class="shop-container" *ngIf="!loading">
+<div class="row shop-container" *ngIf="!loading">
   <mat-card-title class="margin-left-10">
     {{title | translate}}
   </mat-card-title>
-  <mat-card-subtitle class="margin-left-10">
+  <!--<mat-card-subtitle class="margin-left-10">
     {{data | translate}}
-  </mat-card-subtitle>
+  </mat-card-subtitle>-->
+  <div class="row">
   <app-product [gridView]="true" [productsList]="productsList"></app-product>
+  </div>
 </div>
